# refactor

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  environment.yml  pyproject.toml  refactors.py  setup.cfg  t5.py
.github/workflows/: pre-commit.yml  publish.yml  test.yml
docs/: requirements.txt
docs/source/: actions.md  api-reference.md  api.md  changelog.md  conf.py  contributing.md  faq.md  glossary.md  going-further.md  index.md  installation.md  playground.md  session-and-rules.md  tutorial.md
docs/source/tutorials/: actions.md  exploring-rules.md  programmatic-api.md
examples/: auto_future_annotation.py  auto_typing_imports.py  deprecated_aliases.py  make_all_dataclasses_frozen.py  propagate.py  replace_placeholders.py  simple_replace.py  switch_places.py  type_literals.future_py  type_literals.py
examples/legacy/: auto_future_annotation.py  auto_typing_imports.py  make_all_dataclasses_frozen.py  propagate.py  replace_placeholders.py  switch_places.py  type_literals.py
examples/test/: placeholder.py
examples/tutorial/constant-folding/: fold_my_constants.py  program.py  test.py
refactor/: __init__.py  __main__.py  actions.py  ast.py  change.py  common.py  context.py  core.py  runner.py  validate_inputs.py
refactor/internal/: action_optimizer.py  ast_delta.py  ast_path.py  graph_access.py  position_provider.py  structural_merge.py
tests/: test_actions.py  test_ast.py  test_ast_delta.py  test_change.py  test_common.py  test_complete_rules.py  test_context.py  test_core.py  test_position_provider.py  test_representatives.py  test_validation.py  test_warning.py
