[metadata]
name = refactor
version = 0.2.0a0
description = AST based source code refactor interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/refactor
author = isidentical
author_email = isidentical@gmail.com
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.9
