[metadata]
name = refactor
version = 0.6.2
description = AST-based fragmental source code refactoring toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/refactor
author = isidentical
author_email = isidentical@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://refactor.readthedocs.io/
    Source = https://github.com/isidentical/refactor
    Tracker = https://github.com/isidentical/refactor/issues

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    refactor = refactor.__main__:main
